# framepick

./: .gitattributes  .gitignore  Cargo.toml  README.md  tauri.conf.json
capabilities/: default.json
docs/: REQUIREMENTS.md
docs/superpowers/plans/: 2026-03-16-pipeline-integration.md  2026-03-17-v1-polish.md
frontend/: index.html
frontend/css/: style.css  theme.css
frontend/js/: app.js  capture-list.js  capture-mode.js  i18n.js  playlist.js  progress.js  queue.js  settings.js  slides-viewer.js  state.js  url-input.js
src/: capture.rs  capture_fallback.rs  cleanup.rs  cmd_util.rs  config.rs  downloader.rs  input_state.rs  lib.rs  main.rs  metadata.rs  playlist.rs  progress.rs  queue_processor.rs  settings.rs  slides_generator.rs  slides_viewer.rs  subtitle_detector.rs  subtitle_extractor.rs  theme.rs  tools_manager.rs  url_validator.rs
src-ui/: app.js  capture-list.js  i18n.js  index.html  state.js  styles.css  theme.css  url-input.js
tests/: e2e_capture.rs
