[package]
name = "framepick"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-shell = "2.3.5"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
zip = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "framepick_lib"
path = "src/lib.rs"

[[bin]]
name = "framepick"
path = "src/main.rs"
